--- a/Flask_CRUD_App_Template_code(1)/Flask_CRUD_App_Template_code/Flask_CRUD_App/templates/movies.html
+++ b/Flask_CRUD_App_Template_code(1)/Flask_CRUD_App_Template_code/Flask_CRUD_App/templates/movies.html
@@ -10,7 +10,8 @@
     <!-- In page styling - Background Image, Bootstrap Elements and Pagination elements -->
     <style>
         body {
-            background-image: url("https://i2.wp.com/solvedquestion.com/wp-content/uploads/2021/03/hollywood-movies-2021.jpg?resize=872%2C593&ssl=1");
+            <!--background-image: url("https://i2.wp.com/solvedquestion.com/wp-content/uploads/2021/03/hollywood-movies-2021.jpg?resize=872%2C593&ssl=1");-->
+            background-image: url("Flask_CRUD_App_Template_code(1)\Flask_CRUD_App_Template_code\Flask_CRUD_App\static\pexels-felix-mittermeier-956999.jpg");
         }
 
         h2 a {
